			   XPCE ChangeLog
			   ==============

VERSION 6.2.8, distributed with SWI-Prolog 5.2.8
================================================

* ADDED: Support for new event-types.  See event_node->initialise.

* ADDED: Class tabular (library(tabular)): ->append now accepts
  table_cell objects.

* ADDED: drag_and_drop_gesture<-select_command to deal with command selection
  in right-dragging.

* ADDED: popup_gesture->max_drag_distance to get a popup that opens at
  the `Up' event.

* MODIFIED: Allow drag_and_drop_gesture->cursor: @default to create the
  cursor from the dragged graphical.

* ADDED: `node->move_before' to move a node just before another.

* FIXED: `node->move_after' to handle @default as advertised (move to end).

* ENHANCED: object->delete_hyper to destroy the object's <-hypers chain
  after deleting the last hyper.


VERSION 6.2.7, distributed with SWI-Prolog 5.2.7
================================================

* FIXED: temporary filename generation (new(X, file)).  Dave Hankinson.

* ADDED: Documentation for pce_autoload_all/0.  Lourens van der Meij and
  Piet Mertens.

* FIXED: Change label of objects in dialog editor.  Denis Medvedev.

* FIXED: Class node (part of tree) placement of constrained graphicals using
  ->geometry instead of ->set, so windows can be displayed in hierarchy nodes.
  Also ensure `window<-contained_in' returns the node in this case.

* FIXED: pce_identifier_item.pl: declare the used error (not filled).

* FIXED: Avoid text_image (used by editor and list_browser) to draw selection
  over scrollbar.

* ADDED: pce_begin_class/[2,3]: test for redefinition of built-in and user
  defined classes.

* FIXED: Produce clean error message when running a class whose super-class
  is missing.

* FIXED: PceEmacs SGML mode: avoid long delay on long lists of elements
  in very large files.

* FIXED: Popup handling with library(pce_unclip).


VERSION 6.2.6, distributed with SWI-Prolog 5.2.6